implementerat en desktop vy av hemsidan

--- a/frontend/war/Frontend.html
+++ b/frontend/war/Frontend.html
@@ -16,6 +16,8 @@
     <!-- link type="text/css" rel="stylesheet" href="Frontend.css">    -->
     <link rel="stylesheet" type="text/css" href="css/gxt-all.css" />
 
+
+	
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
@@ -35,6 +37,9 @@
   <!-- to create a completely dynamic UI.        -->
   <!--                                           -->
   <body>
+    <div id="x-desktop">
+        <dl id="x-shortcuts"></dl>
+    </div>
     <!-- OPTIONAL: include this if you want history support -->
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
   </body>
