--- a/frontend/war/Frontend.html
+++ b/frontend/war/Frontend.html
@@ -15,7 +15,7 @@
     <!--                                                               -->
     <!-- link type="text/css" rel="stylesheet" href="Frontend.css">    -->
     <link rel="stylesheet" type="text/css" href="css/gxt-all.css" />
-
+	<link rel="stylesheet" type="text/css" href="Frontend.css" />
 
 	
     <!--                                           -->
