--- a/frontend/war/Frontend.html
+++ b/frontend/war/Frontend.html
@@ -14,10 +14,8 @@
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
     <!-- link type="text/css" rel="stylesheet" href="Frontend.css">    -->
-    <link rel="stylesheet" type="text/css" href="css/gxt-all.css" />
-	<link rel="stylesheet" type="text/css" href="Frontend.css" />
-
-	
+    <!-- <link rel="stylesheet" type="text/css" href="css/gxt-all.css" /> -->
+    
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
